    respectively inside the documentation.

  * Having IO::FDPass is beneficial for Condvar(s), Handle(s), and Queue(s).
    Thus, append IO::FDPass to PREREQ_PM if we can and not already installed.
    Run MCE_PREREQ_EXCLUDE_IO_FDPASS=1 perl Makefile.PL to bypass the check.

  * Improved documentation for QUERY STRING in various helper classes.
  * Updated SYNOPSIS in various helper classes.

1.808 Fri Dec 09 23:30:00 EST 2016

  * Optimized the barrier synchronization example in MCE::Shared::Condvar.

1.807 Wed Nov 23 16:00:00 EST 2016

  * Refactored MCE::Hobo. Thank you, Hermann Mueller for test case.
  * Improved reliability on the Windows platform by using threads.
  * Bug fixes for test scripts.

1.806 Tue Nov 01 16:00:00 EST 2016

  * Added a new section titled LOCKING to the MCE::Shared documentation.
  * Tweaked shared-manager-loop delay -- applies to MSWin32 only.

1.805 Fri Sep 23 01:00:00 EST 2016

  * Fixed close method in shared-handle to work with Perl5i.
    Support for Perl5i is on Unix only. Do not use threads.

  * Bumped MCE dependency to 1.805.

1.804 Thu Sep 01 16:00:00 EST 2016

  * Fixed bug in MCE::Shared::Queue. Thank you, Mary Ehlers.

  * Improved support for running MCE::Hobo with Tk. Added Tk demonstrations
    to MCE::Examples (1.805). Thank you, Götz Meyer.

1.803 Sun Jul 10 23:30:00 EST 2016

  * Modified MCE::Shared::{ Base, Minidb } to pass testing with Sereal.
  * Re-enabled Sereal 3.008+ for Perl < v5.12.0, if available.
  * Optimized dequeue methods in MCE::Shared::Server.

1.802 Mon Jul 04 03:30:00 EST 2016

  * Default to Storable for serialization in Perl less than v5.12.0.
    Sereal 3.008+, if available, is loaded automatically in Perl v5.12+.

1.801 Sun Jul 03 00:30:00 EST 2016

  [BUG FIXES]

  * Fixed bug with MCE::Hobo for the Solaris platform.
  * Fixed race condition in Condvar->broadcast, ->signal, ->wait.
  * Fixed race condition in Queue->await.

  [ENHANCEMENTS]
